--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,8 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongodb": "^4.9.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.10",
